# patefact

./: .env.example  .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
docs/: DEMO_REPORT.md  dashboard.html
opendir/: admin.py  admin_theme.py  apps.py  models.py
opendir/analyze/: file_listing.py  honeypot.py  hosts.py  inventory.py  ownership.py
opendir/capture/: fetcher.py  fingerprint.py  modal_app.py  parser.py  tier1.py
opendir/classify/: features.py  goldset.py  rules.py  service.py
opendir/discovery/: base.py  censys.py  normalize.py  scope.py  shodan.py
opendir/enrich/: virustotal.py
opendir/infra/: cloudinit.py  deploy.py  do_client.py  ingest.py  orchestrate.py  provision.py  worker.py
opendir/migrations/: 0001_initial.py  0004_classification.py  (+4 more)
scripts/: eval_classifier.py  generate_dashboard.py  generate_report.py  modal_live_test.py
tests/: conftest.py  test_admin.py  test_censys.py  test_classify_command.py  test_classify_goldset.py  test_cloudinit.py  test_commands.py  test_deploy.py  test_discovery_base.py  test_do_capture.py  test_do_client.py  test_features.py  test_fetcher.py  test_file_listing.py  test_fingerprint.py  test_hash_payloads.py  test_honeypot.py  test_hosts.py  test_ingest.py  test_inventory.py  test_modal_app.py  test_models.py  test_normalize.py  test_orchestrate.py  test_ownership.py  test_parser.py  test_payload_select.py  test_provision.py  test_rules.py  test_scope.py  test_shodan.py  test_smoke.py  test_tier1.py  test_virustotal.py  test_worker.py
(+14 files in other folders)
